Feature/jenkins build containers (#4)
* Initial checking of new Jenkinsfile

* Attempting to echo the changes in this commit

* Adding steps around the discovering changes stage

* Attempting to echo changes

* Making a change to the transmission Build

* Printing the file name and path

* Printing of the container that is going to be built

* Trying a different technique of changes

* Attempting to few changes

* Checkout this branch

* Printing file changes

* Attempt 2

* Testing

* Reverting

* Hey

* Changing the way I get the file path

* Adding comment to the dockerfile

* Using raw build£

* Adding comment

* Removing checkout smc

* Reverting checout scm changes

* Removing the chcekou

* Changing

* Comment revert

* adding comment and jenkinsfile

* attempting a different for loop

* Syntax for loop

* Syntax for loop

* hey

* Comment out check

* Push all changes

* Test

* test

* foor loop

* foor loop

* foor loop

* foor loop

* creating file exists function

* Renaming function

* Check true

* check

* check

* check

* check

* check

* docker build step

* Testing dockerfile build

* Attempting to build a dockercontainer within a different dir

* test

* Updating the Terraform version

* BUMP the terraform version

* BUMP the terraform version

* BUMP the terraform version

* BUMP the terraform version

* Reformatting the jenkinsfile post

* Removing script from post jenkinsfile

* removing label from post action

* Adding post

* Removing post test

* Removing label from all steps

* Adding terraform test

* Will it push?

* Attempting to use a username instead of password

* £new creds

* TF numpber

* TF numpber

* Adding awscli

* AWSCLI update

* AWSCLI update

--- a/transmission/Dockerfile
+++ b/transmission/Dockerfile
@@ -1,11 +1,10 @@
 FROM lsiobase/alpine:3.8
 
-# set version label
 ARG BUILD_DATE
 ARG VERSION
 
+# test
 RUN \
- echo "**** install packages ****" && \
  apk add --no-cache \
 	curl \
 	jq \
@@ -18,6 +17,5 @@ RUN \
 	unrar \
 	unzip
 
-# ports and volumes
 EXPOSE 9091 51413
 VOLUME /config /downloads /watch
