Updating Terraform and adding terragrunt

--- a/terragrunt/Dockerfile
+++ b/terragrunt/Dockerfile
@@ -7,11 +7,15 @@ RUN	apk add --no-cache \
 	curl
 
 ARG TERRAFORM_VERSION
+ARG TERRAGRUNT_VERSION
 
 RUN 	curl -o terraform.zip https://releases.hashicorp.com/terraform/${TERRAFORM_VERSION}/terraform_${TERRAFORM_VERSION}_linux_amd64.zip && \
 	unzip terraform.zip && \
 	mv terraform /usr/bin && \
 	rm terraform.zip
 
-ENTRYPOINT [ "terraform" ]
+RUN	curl -sS -L https://github.com/gruntwork-io/terragrunt/releases/download/v${TERRAGRUNT_VERSION}/terragrunt_linux_amd64 -o /usr/bin/terragrunt && \
+	chmod +x /usr/bin/terragrunt
+
+ENTRYPOINT [ "terragrunt" ]
 CMD [ "--help" ]
